correct overflow issues with header at 700px range

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -132,7 +132,7 @@
 @media screen and (min-width: 641px) and (max-width: 939px) {
 
   .profile__info {
-    grid-template-columns: minmax(auto, 400px) auto;
+    grid-template-columns: minmax(auto, 260px) auto;
   }
 
   .profile__title {
